--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -30,9 +30,7 @@ jobs:
 
       - name: Copy files
         run: |
-          cp -r everything-presence-esp32/ _site/  # Copy manifest.json to _site directory
-          cp *.json _site/
-          cp -r everything-presence-lite-esp32/ _site/  # Copy esp32-presence directory to _site directory
+          cp -r * _site/
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
