--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -28,9 +28,9 @@ jobs:
           ruby-version: '3.2'  # Specify your Ruby version here
           bundler-cache: true
 
-      # - name: Copy files
-      #   run: |
-      #     cp -r ./* _site/
+      - name: Copy files
+        run: |
+          mkdir _site && cp -r ./* _site/
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v2
