--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -48,6 +48,17 @@ jobs:
         run: cd static && bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}" --destination "../_site"
         env:
           JEKYLL_ENV: production
+
+      - name: Checkout gh-pages Branch
+        uses: actions/checkout@v3
+        with:
+          ref: gh-pages
+          path: 'gh-pages'
+
+      - name: Copy Files from gh-pages Branch
+        run: |
+          cp -r gh-pages/* _site/
+          
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v2
