--- a/.github/workflows/esphome-build.yml
+++ b/.github/workflows/esphome-build.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Create single manifest.json
         run: |
           jq -s '{"name": "${{ inputs.name }}", "version": "${{ needs.build.outputs.esphome-version }}", "home_assistant_domain": "esphome", "new_install_skip_erase": false, "builds":.}' output/*/manifest.json > output/${{ inputs.manifest_filename }}
-          sed -i 's/"${{ needs.build.outputs.esphome-esphome-build-name }}"/"${{ inputs.directory_name }}"/g' ${{ inputs.manifest_filename }}
+          sed -i 's/"${{ needs.build.outputs.esphome-build-name }}"/"${{ inputs.directory_name }}"/g' output/${{ inputs.manifest_filename }}
 
 
       - run: cp -R static/* output
