Add build process for LD2410

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,8 @@ on:
       - '**.yaml'
 
 jobs:
-  publish-everything-presence-lite:
-    name: Publish Everything Presence Lite
+  publish-everything-presence-lite-ha:
+    name: Publish Everything Presence Lite HA
     uses: EverythingSmartHome/everything-presence-lite/.github/workflows/esphome-build.yml@main
     with:
       files: everything-presence-lite-ha.yaml
@@ -20,21 +20,32 @@ jobs:
       esphome_version: latest
       directory_name: everything-presence-lite-ha
   publish-everything-presence-lite-ha-no-ble:
-    name: Publish Everything Presence Lite No BLE
+    name: Publish Everything Presence Lite HA No BLE
     uses: EverythingSmartHome/everything-presence-lite/.github/workflows/esphome-build.yml@main
     with:
       files: everything-presence-lite-ha-no-ble.yaml
-      name: Everything Presence Lite No BLE
+      name: Everything Presence Lite HA No BLE
       manifest_filename: everything-presence-lite-ha-no-ble-manifest.json
       clean: false
       esphome_version: latest
       directory_name: everything-presence-lite-ha-no-ble
-#  publish-everything-presence-one-ha-beta:
-#    name: Publish Everything Presence One Home Assistant Beta
-#    uses: esphome/workflows/.github/workflows/publish.yml@main
-#    with:
-#      files: everything-presence-one-beta.yaml
-#      name: Everything Presence One HA Beta
-#      manifest_filename: everything-presence-one-ha-beta-manifest.json
-#      clean: false
-#      esphome_version: latest
+  publish-everything-presence-lite-ha-ld2410:
+    name: Publish Everything Presence Lite HA LD2410
+    uses: EverythingSmartHome/everything-presence-lite/.github/workflows/esphome-build.yml@main
+    with:
+      files: everything-presence-lite-ha-ld2410.yaml
+      name: Everything Presence Lite HA LD2410
+      manifest_filename: everything-presence-lite-ha-ld2410-manifest.json
+      clean: false
+      esphome_version: latest
+      directory_name: everything-presence-lite-ha-ld2410
+  publish-everything-presence-lite-ha-ld2410-no-ble:
+    name: Publish Everything Presence Lite HA LD2410 No BLE
+    uses: EverythingSmartHome/everything-presence-lite/.github/workflows/esphome-build.yml@main
+    with:
+      files: everything-presence-lite-ha-ld2410-no-ble.yaml
+      name: Everything Presence Lite HA LD2410 No BLE
+      manifest_filename: everything-presence-lite-ha-ld2410-no-ble-manifest.json
+      clean: false
+      esphome_version: latest
+      directory_name: everything-presence-lite-ha-ld2410-no-ble
