--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -49,3 +49,23 @@ jobs:
       clean: false
       esphome_version: latest
       directory_name: everything-presence-lite-ha-ld2410-no-ble
+  publish-everything-presence-lite-ha-sen0395:
+    name: Publish Everything Presence Lite HA SEN0395
+    uses: EverythingSmartHome/everything-presence-lite/.github/workflows/esphome-build.yml@main
+    with:
+      files: everything-presence-lite-ha-sen0395.yaml
+      name: Everything Presence Lite HA SEN0395
+      manifest_filename: everything-presence-lite-ha-sen0395-manifest.json
+      clean: false
+      esphome_version: latest
+      directory_name: everything-presence-lite-ha-sen0395
+  publish-everything-presence-lite-ha-sen0395-no-ble:
+    name: Publish Everything Presence Lite HA SEN0395 No BLE
+    uses: EverythingSmartHome/everything-presence-lite/.github/workflows/esphome-build.yml@main
+    with:
+      files: everything-presence-lite-ha-sen0395-no-ble.yaml
+      name: Everything Presence Lite HA SEN0395 No BLE
+      manifest_filename: everything-presence-lite-ha-sen0395-no-ble-manifest.json
+      clean: false
+      esphome_version: latest
+      directory_name: everything-presence-lite-ha-sen0395-no-ble
