--- a/common/ld2450-base.yaml
+++ b/common/ld2450-base.yaml
@@ -1,3 +1,20 @@
+esphome:
+  on_boot: 
+    priority: -100
+    then:
+      - binary_sensor.template.publish:
+          id: zone1_occupancy
+          state: false 
+      - binary_sensor.template.publish:
+          id: zone2_occupancy
+          state: false 
+      - binary_sensor.template.publish:
+          id: zone3_occupancy
+          state: false 
+      - binary_sensor.template.publish:
+          id: zone4_occupancy
+          state: false
+
 globals:
   - id: mmwave_update_time
     type: unsigned long
@@ -9,7 +26,7 @@ binary_sensor:
     name: "Occupancy"
     device_class: occupancy
     filters:
-      - delayed_off: !lambda return (id(off_delay).state *1000);
+      - delayed_off: !lambda return (id(off_delay).state * 1000);
     lambda: |-
       return (id(target1_distance).state != 0
         || id(target2_distance).state != 0
@@ -18,24 +35,24 @@ binary_sensor:
     name: "Zone 1 Occupancy"
     id: zone1_occupancy
     filters:
-      - delayed_off: !lambda return (id(zone_1_off_delay).state *1000);
+      - delayed_off: !lambda return (id(zone_1_off_delay).state * 1000);
   - platform: template
     name: "Zone 2 Occupancy"
     id: zone2_occupancy
     filters:
-      - delayed_off: !lambda return (id(zone_2_off_delay).state *1000);
+      - delayed_off: !lambda return (id(zone_2_off_delay).state * 1000);
     disabled_by_default: true
   - platform: template
     name: "Zone 3 Occupancy"
     id: zone3_occupancy
     filters:
-      - delayed_off: !lambda return (id(zone_3_off_delay).state *1000);
+      - delayed_off: !lambda return (id(zone_3_off_delay).state * 1000);
     disabled_by_default: true
   - platform: template
     name: "Zone 4 Occupancy"
     id: zone4_occupancy
     filters:
-      - delayed_off: !lambda return (id(zone_4_off_delay).state *1000);
+      - delayed_off: !lambda return (id(zone_4_off_delay).state * 1000);
     disabled_by_default: true
   - platform: template
     name: "Target 1 Active"
@@ -446,7 +463,7 @@ uart:
     direction: BOTH
     dummy_receiver: True
     after:
-     delimiter: [0X55, 0XCC]
+      delimiter: [0X55, 0XCC]
     sequence:
       # - lambda: UARTDebug::log_hex(direction, bytes, ' ');
       - lambda: |-
@@ -534,51 +551,92 @@ uart:
 
           float max_distance = float(id(distance).state) * 10;
           if (p1_distance < max_distance) {
-            id(target1_x).publish_state(p1_x * -1);
-            id(target1_y).publish_state(p1_y);
-            id(target1_speed).publish_state(p1_speed / 100);
-            id(target1_resolution).publish_state(p1_distance_resolution);
-            id(target1_distance).publish_state(p1_distance);
-            id(target1_angle).publish_state(p1_angle - 90);
+            p1_x *= -1;
+            if (id(target1_x).state != p1_x)
+              id(target1_x).publish_state(p1_x);
+            if (id(target1_y).state != p1_y)
+              id(target1_y).publish_state(p1_y);
+            p1_speed /= 100.0;
+            if (id(target1_speed).state != p1_speed)
+              id(target1_speed).publish_state(p1_speed);
+            if (id(target1_resolution).state != p1_distance_resolution)
+              id(target1_resolution).publish_state(p1_distance_resolution);
+            if (id(target1_distance).state != p1_distance)
+              id(target1_distance).publish_state(p1_distance);
+            // p1_angle -= 90;
+            if (id(target1_angle).state != p1_angle)
+              id(target1_angle).publish_state(p1_angle);
           } else {
-            id(target1_x).publish_state(0);
-            id(target1_y).publish_state(0);
-            id(target1_speed).publish_state(0);
-            id(target1_resolution).publish_state(0);
-            id(target1_distance).publish_state(0);
-            id(target1_angle).publish_state(0);
+            if (id(target1_x).state != 0)
+              id(target1_x).publish_state(0);
+            if (id(target1_y).state != 0)
+              id(target1_y).publish_state(0);
+            if (id(target1_speed).state != 0)
+              id(target1_speed).publish_state(0);
+            if (id(target1_resolution).state != 0)
+              id(target1_resolution).publish_state(0);
+            if (id(target1_distance).state != 0)
+              id(target1_distance).publish_state(0);
+            if (id(target1_angle).state != 0)
+              id(target1_angle).publish_state(0);
           }
 
           if (p2_distance < max_distance) {
-            id(target2_x).publish_state(p2_x);
-            id(target2_y).publish_state(p2_y);
-            id(target2_speed).publish_state(p2_speed / 100);
-            id(target2_resolution).publish_state(p2_distance_resolution);
-            id(target2_distance).publish_state(p2_distance);
-            id(target2_angle).publish_state(p2_angle);
+            if (id(target2_x).state != p2_x)
+              id(target2_x).publish_state(p2_x);
+            if (id(target2_y).state != p2_y)
+              id(target2_y).publish_state(p2_y);
+            p2_speed /= 100.0;
+            if (id(target2_speed).state != p2_speed)
+              id(target2_speed).publish_state(p2_speed);
+            if (id(target2_resolution).state != p2_distance_resolution)
+              id(target2_resolution).publish_state(p2_distance_resolution);
+            if (id(target2_distance).state != p2_distance)
+              id(target2_distance).publish_state(p2_distance);
+            if (id(target2_angle).state != p2_angle)
+              id(target2_angle).publish_state(p2_angle);
           } else {
-            id(target2_x).publish_state(0);
-            id(target2_y).publish_state(0);
-            id(target2_speed).publish_state(0);
-            id(target2_resolution).publish_state(0);
-            id(target2_distance).publish_state(0);
-            id(target2_angle).publish_state(0);
+            if (id(target2_x).state != 0)
+              id(target2_x).publish_state(0);
+            if (id(target2_y).state != 0)
+              id(target2_y).publish_state(0);
+            if (id(target2_speed).state != 0)
+              id(target2_speed).publish_state(0);
+            if (id(target2_resolution).state != 0)
+              id(target2_resolution).publish_state(0);
+            if (id(target2_distance).state != 0)
+              id(target2_distance).publish_state(0);
+            if (id(target2_angle).state != 0)
+              id(target2_angle).publish_state(0);
           }
 
           if (p3_distance < max_distance) {
-            id(target3_x).publish_state(p3_x);
-            id(target3_y).publish_state(p3_y);
-            id(target3_speed).publish_state(p3_speed / 100);
-            id(target3_resolution).publish_state(p3_distance_resolution);
-            id(target3_distance).publish_state(p3_distance);
-            id(target3_angle).publish_state(p3_angle);
+            if (id(target3_x).state != p3_x)
+              id(target3_x).publish_state(p3_x);
+            if (id(target3_y).state != p3_y)
+              id(target3_y).publish_state(p3_y);
+            p3_speed /= 100.0;
+            if (id(target3_speed).state != p3_speed)
+              id(target3_speed).publish_state(p3_speed);
+            if (id(target3_resolution).state != p3_distance_resolution)
+              id(target3_resolution).publish_state(p3_distance_resolution);
+            if (id(target3_distance).state != p3_distance)
+              id(target3_distance).publish_state(p3_distance);
+            if (id(target3_angle).state != p3_angle)
+              id(target3_angle).publish_state(p3_angle);
           } else {
-            id(target3_x).publish_state(0);
-            id(target3_y).publish_state(0);
-            id(target3_speed).publish_state(0);
-            id(target3_resolution).publish_state(0);
-            id(target3_distance).publish_state(0);
-            id(target3_angle).publish_state(0);
+            if (id(target3_x).state != 0)
+              id(target3_x).publish_state(0);
+            if (id(target3_y).state != 0)
+              id(target3_y).publish_state(0);
+            if (id(target3_speed).state != 0)
+              id(target3_speed).publish_state(0);
+            if (id(target3_resolution).state != 0)
+              id(target3_resolution).publish_state(0);
+            if (id(target3_distance).state != 0)
+              id(target3_distance).publish_state(0);
+            if (id(target3_angle).state != 0)
+              id(target3_angle).publish_state(0);
           }
 
           int zone1_count = 0;      
@@ -604,10 +662,14 @@ uart:
           }
 
           if (zone1_count > 0) {
+            if (id(zone1_occupancy).state != true)
               id(zone1_occupancy).publish_state(true);
+            if (id(zone1_target_count).state != zone1_count)
               id(zone1_target_count).publish_state(zone1_count);
           } else {
+            if (id(zone1_occupancy).state != false)
               id(zone1_occupancy).publish_state(false);
+            if (id(zone1_target_count).state != 0)
               id(zone1_target_count).publish_state(0);
           }
 
@@ -631,10 +693,14 @@ uart:
               }
           }
           if (zone2_count > 0) {
+            if (id(zone2_occupancy).state != true)
               id(zone2_occupancy).publish_state(true);
+            if (id(zone2_target_count).state != zone2_count)
               id(zone2_target_count).publish_state(zone2_count);
           } else {
+            if (id(zone2_occupancy).state != false)
               id(zone2_occupancy).publish_state(false);
+            if (id(zone2_target_count).state != 0)
               id(zone2_target_count).publish_state(0);
           }
 
@@ -658,10 +724,14 @@ uart:
               }
           }
           if (zone3_count > 0) {
+            if (id(zone3_occupancy).state != true)
               id(zone3_occupancy).publish_state(true);
+            if (id(zone3_target_count).state != zone3_count)
               id(zone3_target_count).publish_state(zone3_count);
           } else {
+            if (id(zone3_occupancy).state != false)
               id(zone3_occupancy).publish_state(false);
+            if (id(zone3_target_count).state != 0)
               id(zone3_target_count).publish_state(0);
           }
 
@@ -685,9 +755,13 @@ uart:
               }
           }
           if (zone4_count > 0) {
+            if (id(zone4_occupancy).state != true)
               id(zone4_occupancy).publish_state(true);
+            if (id(zone4_target_count).state != zone4_count)
               id(zone4_target_count).publish_state(zone4_count);
           } else {
+            if (id(zone4_occupancy).state != false)
               id(zone4_occupancy).publish_state(false);
+            if (id(zone4_target_count).state != 0)
               id(zone4_target_count).publish_state(0);
           }
