--- a/.github/workflows/esphome-build.yml
+++ b/.github/workflows/esphome-build.yml
@@ -71,6 +71,7 @@ jobs:
           path: output
 
   publish:
+    if: (github.event_name == 'workflow_dispatch' || github.event_name == 'push') && github.ref == 'refs/heads/main'
     name: Publish new firmware and website to GitHub Pages
     runs-on: ubuntu-latest
     needs: [build]
