--- a/.github/workflows/esphome-build.yml
+++ b/.github/workflows/esphome-build.yml
@@ -63,7 +63,8 @@ jobs:
           version: ${{ inputs.esphome_version }}
       - run: |
           mkdir output
-          mv "${{ steps.esphome-build.outputs.name}}" "${{ inputs.directory_name }}" 2>/dev/null
+          mv "${{ steps.esphome-build.outputs.name}}" temp
+          mv temp "${{ inputs.directory_name }}"
           mv "${{ inputs.directory_name }}" output/
       - uses: actions/upload-artifact@v3.1.2
         with:
