--- a/.github/workflows/esphome-build.yml
+++ b/.github/workflows/esphome-build.yml
@@ -56,7 +56,7 @@ jobs:
       esphome-build-name: ${{ steps.esphome-build.outputs.name}}
     steps:
       - uses: actions/checkout@v3.5.3
-      - uses: esphome/build-action@v3.2.0
+      - uses: esphome/build-action@v3.0.0
         id: esphome-build
         with:
           yaml_file: ${{ matrix.file }}
@@ -85,8 +85,7 @@ jobs:
 
       - name: Create single manifest.json
         run: |
-          version=$(cat project_version)
-          jq -s '{"name": "${{ inputs.name }}", "version": $version, "home_assistant_domain": "esphome", "new_install_skip_erase": false, "builds":.}' output/*/manifest.json > output/${{ inputs.manifest_filename }}
+          jq -s '{"name": "${{ inputs.name }}", "version": "${{ steps.esphome-build.outputs.project-version }}", "home_assistant_domain": "esphome", "new_install_skip_erase": false, "builds":.}' output/*/manifest.json > output/${{ inputs.manifest_filename }}
           sed -i 's/${{ needs.build.outputs.esphome-build-name }}\//${{ inputs.directory_name }}\//g' output/${{ inputs.manifest_filename }}
 
 
