--- a/common/everything-presence-lite-base.yaml
+++ b/common/everything-presence-lite-base.yaml
@@ -5,7 +5,7 @@ esphome:
   name_add_mac_suffix: True
   project: 
     name: EverythingSmartTechnology.Everything Presence Lite
-    version: "1.0.3"
+    version: "1.0.4"
 
 esp32:
   board: esp32dev
@@ -20,7 +20,10 @@ logger:
 api:
 
 ota:
-  platform: esphome
+  - platform: esphome
+    id: ota_esphome
+  - platform: http_request
+    id: ota_http_request
 
 wifi:
 
