Add ID to status_led

--- a/common/everything-presence-lite-base.yaml
+++ b/common/everything-presence-lite-base.yaml
@@ -40,6 +40,7 @@ i2c:
 light:
   - platform: status_led
     name: ESP32 LED
+    id: esp32_led
     pin: GPIO14
     internal: False
     restore_mode: ALWAYS_OFF
